fix several problems with site on mobile safari

--- a/source/scss/components/_card.scss
+++ b/source/scss/components/_card.scss
@@ -6,10 +6,24 @@
 }
 
 .card {
-  margin: 2rem 1rem;
-  min-width: 16rem;
-  max-width: 33%;
+  padding: 2rem 1rem;
+  margin-bottom: 2rem;
+  box-sizing: border-box;
+  flex: 0 0 50%;
   position: relative;
+  max-width: auto;
+}
+
+@media screen and (max-width: 540px) {
+  .card {
+    flex-basis: 100%;
+  }
+}
+
+@media screen and (min-width: 960px) {
+  .card {
+    flex-basis: 33.33%;
+  }
 }
 
 .card img {
@@ -19,4 +33,8 @@
 
 .card:hover img {
   opacity: .3;
+}
+
+.card-max {
+  max-width: 700px;
 }
