--- a/source/scss/components/_markdown.scss
+++ b/source/scss/components/_markdown.scss
@@ -46,7 +46,7 @@
     margin: 2em 0 2em -4vw;
     color: $blue;
     border-left: 2px solid $blue;
-    padding-left: 2vw;
+    padding-left: 4vw;
     font-size: $font-size-1;
     line-height: 1.25;
   }
